music part changes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <i class="fas fa-guitar"></i>
                             <div>
                                 <h4>Music & Guitar</h4>
-                                <p>Playing guitar for 3+ years, exploring different genres from classical to modern music.</p>
+                                <p>Playing guitar as a HOBBY for 2+ years, I am just playing guitar in my spare time,it helps relax,think,to spend valuable time with on my own, and so more.</p>
                             </div>
                         </div>
                         <div class="interest-item">
