adding personal photo

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero-section">
         <div class="profile-photo-container">
-            <img src="myphoto.jpg" alt="Nural Rahmanli Photo" class="profile-photo" />
-            <div class="photo-overlay">
-                <span>Nural Rahmanli</span>
-            </div>
+            <img src="WhatsApp Image 2025-12-19 at 15.27.40.jpeg" alt="Nural Rahmanli Photo" class="profile-photo" />
         </div>
         <div class="hero-content">
             <h1>Nural Rahmanli</h1>
